# IEMidi

./: .gitignore  .gitmodules  CMakeLists.txt  IEMidi.desktop  Info.plist  README.md  info.plist
Application/: CMakeLists.txt  main.cpp
Resources/Styles/: App.qss
Resources/Stylesheets/: MainStylesheet.qss
Source/: CMakeLists.txt  IEMidi.cpp  IEMidi.h  IEMidiApp.cpp  IEMidiApp.h  IEMidiEditor.cpp  IEMidiProcessor.cpp  IEMidiProcessor.h  IEMidiProfileManager.cpp  IEMidiProfileManager.h  IEMidiTypes.cpp  IEMidiTypes.h
Source/IEWidgets/: CMakeLists.txt  IEActionTypeDropdownWidget.cpp  IEActionTypeDropdownWidget.h  IEDeletePropertyButton.cpp  IEDeletePropertyButton.h  IEDropdownItemDelegate.cpp  IEDropdownItemDelegate.h  IEFileBrowserWidget.cpp  IEFileBrowserWidget.h  IEMidiActionTypeDropdown.cpp  IEMidiActionTypeDropdown.h  IEMidiActionTypeDropdownWidget.cpp  IEMidiActionTypeDropdownWidget.h  IEMidiDeviceInfo.cpp  IEMidiDeviceInfo.h  IEMidiDeviceInfoFrameWidget.cpp  IEMidiDeviceInfoFrameWidget.h  IEMidiDeviceInfoWidget.cpp  IEMidiDeviceInfoWidget.h  IEMidiDeviceInputPropertyEditor.cpp  IEMidiDeviceInputPropertyEditor.h  IEMidiDeviceOutputPropertyEditor.cpp  IEMidiDeviceOutputPropertyEditor.h  IEMidiInputEditorWidget.cpp  IEMidiInputEditorWidget.h  IEMidiLogger.cpp  IEMidiLogger.h  IEMidiLoggerTableFrameWidget.cpp  IEMidiLoggerTableFrameWidget.h  IEMidiLoggerTableWidget.cpp  IEMidiLoggerTableWidget.h  IEMidiMessageEditor.cpp  IEMidiMessageEditor.h  IEMidiMessageEditorWidget.cpp  IEMidiMessageEditorWidget.h  IEMidiMessageTypeDropdown.cpp  IEMidiMessageTypeDropdown.h  IEMidiMessageTypeDropdownWidget.cpp  IEMidiMessageTypeDropdownWidget.h  IEMidiOutputEditorWidget.cpp  (+5 more)
